--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - 'main'
     paths:
-      - '.github/workflows/tests.yml'
+      - '.github/workflows/tests.yaml'
       - '**.go'
       - 'go.sum'
       - 'go.mod'
